compiler/tools/fpp-check/test/port_instance/undef_param_set.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_param_set.fpp:3.3
  param set port paramSetOut
  ^
error: cannot find symbol `Fw`
note: looking for a port here
